--- a/Imports/templates/header.html
+++ b/Imports/templates/header.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../header.css">
     <title><?= $siteName ?></title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <nav class="flex">
+        <a href="">Accueil</a>
+        <a href="">Quizz</a>
+        <a href="">Connexion</a>
+        <a href="">Inscription</a>
+      </nav>
+    </header>
+  </body>
 </html>
