--- a/Imports/templates/header.html
+++ b/Imports/templates/header.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./Imports/css/header.css">
+    <link rel="shortcut icon" href="./Imports/img/logo.png" type="image/x-icon">
     <title>
         OpenQuizz
     </title>
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="nav-flex">
-            <a href="" class="a-nav-img"><img src="../img/logo.png" alt="OpenQuizz" class="img-nav"></a>
+            <a href="" class="a-nav-img"><img src="./Imports/img/logo.png" alt="OpenQuizz" class="img-nav"></a>
             <a href="" class="a-nav">Accueil</a>
             <a href="" class="a-nav">Quizz</a>
             <a href="" class="a-nav">Connexion</a>
