--- a/Imports/templates/footer.html
+++ b/Imports/templates/footer.html
@@ -1,28 +1,14 @@
-<!DOCTYPE html>
-<html lang="fr">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Imports/css/footer.css">
-    <link rel="shortcut icon" href="./Imports/img/logo.png" type="image/x-icon">
-    <title>
-        OpenQuizz
-    </title>
-</head>
-
-<body>
-    <footer class="footer">
-        <div class="footer-div">
-            <div>
-                <img src="./Imports/img/logo.png" alt="logo" class="img-footer">
-            </div>
-            <div>
-                <p class="text-footer">OpenQuizz est un site de quiz en ligne. Développé dans le cadre d'un projet de formation.</p>
-            </div>
+  </head>
+<footer class="footer">
+    <div class="footer-div">
+        <div>
+            <img src="./Imports/img/logo.png" alt="logo" class="img-footer">
         </div>
-    </footer>
-</body>
-
-</html>
+        <div>
+            <p class="text-footer">OpenQuizz est un site de quiz en ligne. Développé dans le cadre d'un projet de
+                formation.</p>
+        </div>
+    </div>
+</footer>
