ajout de la page inscription (suppression du aside)

--- a/Imports/css/inscription.css
+++ b/Imports/css/inscription.css
@@ -12,48 +12,24 @@
     src: url('../fonts/raleway/Raleway-Regular.ttf');
 }
 
-.aside {
-    display: flex;
-    flex-direction: column;
-    margin: 1rem;
-    margin-right: 0;
-    border-radius: 1rem 0 0 1rem;
-    height: auto;
-    width: auto;
-}
-
-.aside-div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-}
-
 main {
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
+    align-self: center;
 }
 
 .card {
     position: inherit;
     transform: translateY(50%);
-    width: 190px;
+    width: 300px;
     padding: 1.9rem 1.2rem;
     margin-right: 0;
     text-align: center;
     background: var(--dark);
-    border-radius: 1rem 0 0 1rem;
-   }
-   
-   /*Inputs*/
-   .field {
+    border-radius: 1rem 1rem 1rem 1rem;
+}
+
+/*Inputs*/
+.field {
     margin-top: .5rem;
     display: flex;
     align-items: center;
@@ -62,15 +38,15 @@ main {
     background: #1c2942;
     border-radius: 4px;
     padding: .5em 1em;
-   }
-   
-   .input-icon {
+}
+
+.input-icon {
     height: 1em;
     width: 1em;
     fill: var(--blue);
-   }
-   
-   .input-field {
+}
+
+.input-field {
     background: none;
     border: none;
     outline: none;
@@ -78,19 +54,22 @@ main {
     color: var(--blue);
     -webkit-filter: drop-shadow(0px 0px 5px var(--grey));
     filter: drop-shadow(0px 0px 5px var(--grey));
-   }
-   
-   /*Text*/
-   .title {
+    font-size: large;
+}
+
+/*Text*/
+.title {
     margin-top: 0;
     margin-bottom: 1rem;
     font-size: 1.5em;
     font-weight: 500;
     color: #f5f5f5;
-   }
-   
-   /*Buttons*/
-   .btn {
+    -webkit-filter: drop-shadow(0px 0px 5px var(--white));
+    filter: drop-shadow(0px 0px 5px var(--white));
+}
+
+/*Buttons*/
+.btn {
     margin: 1rem;
     border: none;
     border-radius: 4px;
@@ -102,29 +81,36 @@ main {
     color: var(--blue);
     box-shadow: 0 0px 20px 0px var(--blue);
     transition: all .3s ease-in-out;
-   }
-   
-   .btn-link {
+}
+
+.btn-link {
     color: #f5f5f5;
     display: block;
     font-size: .75em;
     transition: color .3s ease-out;
-   }
-   
-   /*Hover & focus*/
-   .field input:focus::placeholder {
+}
+
+/*Hover & focus*/
+.field input:focus::placeholder {
     opacity: 0;
     transition: opacity .3s;
-   }
-   
-   .btn:hover {
+}
+
+.btn:hover {
     background-color: var(--white);
     color: var(--dark);
     box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
     cursor: pointer;
-   }
-   
-   .btn-link:hover {
-    color: #ffeba7;
-   }
+}
 
+.btn-link:hover {
+    color: #ffeba7;
+}
+
+.sub-title {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    font-size: 1.5em;
+    font-weight: 500;
+    color: #f5f5f5;
+}
