--- a/Imports/templates/header.html
+++ b/Imports/templates/header.html
@@ -19,7 +19,7 @@
             <a href="" class="a-nav">Accueil</a>
             <a href="" class="a-nav">Quizz</a>
             <a href="" class="a-nav">Connexion</a>
-            <a href="" class="a-nav">Inscription</a>
+            <a href="./inscription.php" class="a-nav">Inscription</a>
         </nav>
     </header>
 
