modification des nom de variable

--- a/Imports/templates/header.html
+++ b/Imports/templates/header.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Imports/css/header.css">
     <link rel="shortcut icon" href="./Imports/img/logo.png" type="image/x-icon">
     <title>
-        <?= $siteName; ?>
+        <?= siteName; ?>
     </title>
 </head>
 
