--- a/Imports/templates/inscription.html
+++ b/Imports/templates/inscription.html
@@ -3,7 +3,7 @@
 </head>
 <main>
     <div class="card">
-        <h4 class="title">OpenQuizz</h4>
+        <h4 class="title"><?= siteName; ?></h4>
         <h5 class="sub-title">Inscription</h5>
         <form>
             <div class="field">
