--- a/Imports/templates/footer.html
+++ b/Imports/templates/footer.html
@@ -1,14 +1,12 @@
-<head>
-    <link rel="stylesheet" href="./Imports/css/footer.css">
-  </head>
 <footer class="footer">
     <div class="footer-div">
         <div>
             <img src="./Imports/img/logo.png" alt="logo" class="img-footer">
         </div>
         <div>
-            <p class="text-footer">OpenQuizz est un site de quiz en ligne. Développé dans le cadre d'un projet de
+            <p class="text-footer"><?= siteName; ?> est un site de quiz en ligne. Développé dans le cadre d'un projet de
                 formation.</p>
         </div>
     </div>
 </footer>
+<script src="./Imports/js/main.js"></script>
