--- a/Imports/templates/header.html
+++ b/Imports/templates/header.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Imports/css/header.css">
+    <link rel="stylesheet" href="./Imports/css/main.css">
     <link rel="shortcut icon" href="./Imports/img/logo.png" type="image/x-icon">
     <title>
         <?= siteName; ?>
@@ -15,8 +15,8 @@
 <body>
     <header>
         <nav class="nav-flex">
-            <a href="" class="a-nav-img"><img src="./Imports/img/logo.png" alt="OpenQuizz" class="img-nav"></a>
-            <a href="" class="a-nav">Accueil</a>
+            <a href="index.php" class="a-nav-img"><img src="./Imports/img/logo.png" alt="OpenQuizz" class="img-nav"></a>
+            <a href="index.php" class="a-nav">Accueil</a>
             <a href="" class="a-nav">Quizz</a>
             <a href="" class="a-nav">Connexion</a>
             <a href="./inscription.php" class="a-nav">Inscription</a>
