--- a/Imports/templates/inscription.html
+++ b/Imports/templates/inscription.html
@@ -1,7 +1,7 @@
 <head>
     <link rel="stylesheet" href="./Imports/css/inscription.css">
 </head>
-<main>
+<main class="centered_content">
     <div class="card">
         <h4 class="title"><?= siteName; ?></h4>
         <h5 class="sub-title">Inscription</h5>
