--- a/Imports/templates/inscription.html
+++ b/Imports/templates/inscription.html
@@ -5,7 +5,7 @@
     <div class="card">
         <h4 class="title"><?= siteName; ?></h4>
         <h5 class="sub-title">Inscription</h5>
-        <form>
+        <form method="post">
             <div class="field">
                 <svg class="input-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path
@@ -40,8 +40,53 @@
                 <input autocomplete="off" id="logpass" placeholder="Mot de passe" class="input-field" name="logpass"
                     type="password">
             </div>
+            <div class="field">
+                <svg class="input-icon" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M80 192V144C80 64.47 144.5 0 224 0C303.5 0 368 64.47 368 144V192H384C419.3 192 448 220.7 448 256V448C448 483.3 419.3 512 384 512H64C28.65 512 0 483.3 0 448V256C0 220.7 28.65 192 64 192H80zM144 192H304V144C304 99.82 268.2 64 224 64C179.8 64 144 99.82 144 144V192z">
+                    </path>
+                </svg>
+                <input autocomplete="off" id="logpassv" placeholder="Confirmer le mot de passe" class="input-field" name="logpassv"
+                    type="password">
+            </div>
             <button class="btn" type="submit">S'incrire</button>
             <a href="#" class="btn-link">Deja un compte?</a>
         </form>
     </div>
 </main>
+
+<?php
+use Managers\UserManager;
+use Managers\NotificationManager;
+use Enums\RegistrationResult;
+
+if(isset($_POST['logemail']) && isset($_POST['logpass']) && isset($_POST['logpassv']) && isset($_POST['logfirstname']) && isset($_POST['loglastname'])){
+    switch(UserManager::register($db, $_POST['logemail'], $_POST['logpass'], $_POST['logpassv'], $_POST['logfirstname'], $_POST['loglastname'])){
+        case RegistrationResult::Success:
+            NotificationManager::notifySuccess("Merci de votre inscription sur ". siteName);
+            break;
+
+        case RegistrationResult::EmailFormat:
+            NotificationManager::notifyError("Le format de l'email est incorrect...");
+            break;
+
+        case RegistrationResult::EmailExists:
+            NotificationManager::notifyError("Un compte est déjà associé à cet email...");
+            break;
+
+        case RegistrationResult::PasswordFormat:
+            NotificationManager::notifyError("Le format du mot de passe est incorrect, il doit contenir entre 3 et 24 caractères, un chiffre et une majuscule au minimum...");
+            break;
+
+        case RegistrationResult::PasswordsDifferent:
+            NotificationManager::notifyError("Les mots de passes ne correspondent pas...");
+            break;
+
+        case RegistrationResult::SpecialCharsInNames:
+            NotificationManager::notifyError("Le nom et le prénom ne doivent pas contenir de caractères spéciaux...");
+            break;
+    }
+}
+else
+    NotificationManager::notifyError("Veuillez remplir tous les champs");
+?>
