feat(Disconnection): Adding disconnection.

--- a/Imports/templates/header.html
+++ b/Imports/templates/header.html
@@ -1,3 +1,7 @@
+<?php
+use Managers\UserManager;
+?>
+
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -18,13 +22,17 @@
             <a href="index.php" class="a-nav-img"><img src="./Imports/img/logo.png" alt="OpenQuizz" class="img-nav"></a>
             <a href="index.php" class="a-nav">Accueil</a>
             <a href="" class="a-nav">Quizz</a>
-            <a onclick="popup()" class="a-nav">Connexion</a>
-            <a href="./inscription.php" class="a-nav">Inscription</a>
+            <?php
+                if(UserManager::isConnected())
+                    echo '<a href="disconnect.php" class="a-nav">Deconnexion</a>';
+                else{
+                    echo '<a onclick="popup()" class="a-nav">Connexion</a>
+                    <a href="./inscription.php" class="a-nav">Inscription</a>';
+                }
+            ?>
         </nav>
     </header>
 <?php
-use Managers\UserManager;
-
 if(!UserManager::isConnected())
     require_once __DIR__."/popup.html";
 
