--- a/Imports/templates/header.html
+++ b/Imports/templates/header.html
@@ -23,8 +23,13 @@ use Managers\UserManager;
             <a href="index.php" class="a-nav">Accueil</a>
             <a href="" class="a-nav">Quizz</a>
             <?php
-                if(UserManager::isConnected())
+                if(UserManager::isConnected()){
                     echo '<a href="disconnect.php" class="a-nav">Deconnexion</a>';
+
+                    $userAvatar = UserManager::getUserAvatarPath();
+                    if(!is_null($userAvatar))
+                        echo '<a href="" class="user_ava"><img src="'. $userAvatar .'" alt="user_illus"></a>';
+                }
                 else{
                     echo '<a onclick="popup()" class="a-nav">Connexion</a>
                     <a href="./inscription.php" class="a-nav">Inscription</a>';
