--- a/Imports/templates/admin.html
+++ b/Imports/templates/admin.html
@@ -4,7 +4,7 @@
         <section class="dispatcher">
             <div>
                 <h1>Actions</h1>
-                <a href="" class="link_btn">Gérer les quiz</a>
+                <a href="manage_quiz.php" class="link_btn">Gérer les quiz</a>
                 <a href="" class="link_btn">Gérer les questions</a>
             </div>
             <img src="./Imports/img/admin_illus.webp" alt="admin_illus">
