--- a/Imports/templates/header.html
+++ b/Imports/templates/header.html
@@ -21,7 +21,7 @@ use Managers\UserManager;
         <nav class="nav-flex">
             <a href="index.php" class="a-nav-img"><img src="./Imports/img/logo.png" alt="OpenQuizz" class="img-nav"></a>
             <a href="index.php" class="a-nav">Accueil</a>
-            <a href="" class="a-nav">Quizz</a>
+            <a href="" class="a-nav">Quiz</a>
             <?php
                 if(UserManager::isConnected()){
                     if (isset($_SESSION['isAdmin']) && $_SESSION['isAdmin'] > 0)
