--- a/Imports/templates/header.html
+++ b/Imports/templates/header.html
@@ -21,9 +21,10 @@ use Managers\UserManager;
         <nav class="nav-flex">
             <a href="index.php" class="a-nav-img"><img src="./Imports/img/logo.png" alt="OpenQuizz" class="img-nav"></a>
             <a href="index.php" class="a-nav">Accueil</a>
-            <a href="" class="a-nav">Quiz</a>
             <?php
                 if(UserManager::isConnected()){
+                    echo '<a href="quiz.php" class="a-nav">Quiz</a>';
+                    
                     if (isset($_SESSION['isAdmin']) && $_SESSION['isAdmin'] > 0)
                         echo '<a href="admin.php" class="a-nav">Administration</a>';
                       
