--- a/Imports/css/main.css
+++ b/Imports/css/main.css
@@ -414,6 +414,13 @@ main > article > h1{
     padding: 0;
 }
 
+.infos{
+    box-shadow: 0 4px 12px rgba(0,0,0,0.6);
+    border: 1px solid white;
+    border-radius: 4px;
+    padding: 0 10px;
+}
+
 @media screen and (max-width: 768px) {
     .img-nav {
         height: 3rem;
