feat(User)!: Adding the possibility to change password.

--- a/Imports/templates/account.html
+++ b/Imports/templates/account.html
@@ -17,11 +17,11 @@
 
                                 $userAvatar = UserManager::getUserAvatarPath();
                                 if(!is_null($userAvatar))
-                                    echo '<img style="border-radius: 100%; border: 1px solid white; width: '.UserManager::imgSize.'px; height: '.UserManager::imgSize.'px;" src="'. $userAvatar .'" alt="user_illus"></a>';
+                                    echo '<img style="border-radius: 100%; border: 3px solid white; width: '.UserManager::imgSize.'px; height: '.UserManager::imgSize.'px;" src="'. $userAvatar .'" alt="user_illus"></a>';
                             ?>
                         </div>
                     </div><br>
-                    <a href="manage_quiz.php" class="link_btn">Changer votre mot de passe</a>
+                    <a href="account_pass.php" class="link_btn">Changer votre mot de passe</a>
                     <a href="account_img.php" class="link_btn">Changer votre photo</a>
                 </div>
                 <img src="Imports/img/admin_illus.webp" alt="illus_user">
